Fix submit success visibilty

--- a/input/styles.scss
+++ b/input/styles.scss
@@ -131,6 +131,7 @@ body{
         }
     }
     #submit-success{
+        opacity: 0;
         visibility: hidden;
         transition: opacity 0.6s ease-out, visibility 0s linear 0.6s;
         font-family: $secondary-font;
@@ -138,6 +139,7 @@ body{
         transition: opacity 0.6s ease-out, visibility 0.6s ease-out;    
     }
     #submit-success[data-submit="success"] {
+        opacity: 1;
         padding-left: 65px;
         padding-block-end: .75rem;
         display: inline-flex;
